# TaxAssistant

./: .gitignore  CLAUDE.md  FIXES_SUMMARY.md  MONITORING.md  README.md  deploy-fix.sh  docker-compose.yml  plan.md  test-fixes.sh  test-suggestions.js  test_integration.md  test_suggestions.js
python-engine/: .env.example  Dockerfile  grpc_server.py  main.py  pyproject.toml  requirements.txt
python-engine/api/routes/: health.py  tax.py
python-engine/app/: config.py  grpc_server.py  main.py
python-engine/app/ai/: embeddings.py  llm_client.py  prompts.py  rag_service.py
python-engine/app/core/: case_manager.py  intent_classifier.py  onboarding.py  profile_handler.py  suggestions.py  summarizer.py  tax_engine.py
python-engine/core/: case_manager.py  intent_classifier.py  memory.py  onboarding.py
python-engine/data/: scheduler.py  scraper.py  seed_loader.py  tax_config.json  tax_config_loader.py
python-engine/db/: case_repository.py  customer_repository.py  database.py  models.py  summary_repository.py
python-engine/docker/: Dockerfile
python-engine/documents/: extractor.py  ocr.py  processor.py
python-engine/nlp/: vietnamese.py
python-engine/tests/: conftest.py  test_case_manager.py  test_cit_rule.py  test_deadline_calculator.py  test_intent_classifier.py  test_license_tax_abolition.py  test_license_tax_rule.py  test_memory.py  test_message_builder.py  test_notification_endpoints.py  test_notification_scheduler.py  test_onboarding.py  test_pending_calculation.py  test_pit_rule.py  test_seed_loader.py  test_tax_engine.py  test_vat_rule.py
(+137 files in other folders)
