[project]
name = "tax-assistant-engine"
version = "0.1.0"
description = "Python Tax Engine - AI/RAG, Tax Rules, NLP & Document Processing for Vietnamese Tax Assistant"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
